# cmake_mylib

./: .gitignore  CMakeLists.txt  LICENSE  mylib.cpp  mylib.h  readme.md
example/: CMakeLists.txt  example.cpp
